--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-lg-4">
             <h1>Right Side Banner</h1>
-            <img src="/assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
+            <img src="./assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-lg-4">
             <h1>Left Side Banner</h1>
-            <img src="/assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
+            <img src="./assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
         </div>
         <div class="col-lg-8">
             <h1>Right Side Banner</h1>
@@ -177,7 +177,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h1>Left Side Banner</h1>
-                    <img src="/assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
+                    <img src="./assets/images/Premium-Line.jpg" alt="" style="height: 250px;">
                 </div>
                 <div class="col-lg-8">
                     <h1>Right Side Banner</h1>
