--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,33 @@
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
 
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active" style="background-color: black;"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1" style="background-color: black;" ></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2" style="background-color: black;"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/images/Banner1.jpg" alt="Los Angeles" class="d-block" style="width:100% ;height: 500px;">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/Banner1.jpg" alt="Chicago" class="d-block" style="width:100% ;height: 500px;">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/Banner1.jpg" alt="New York" class="d-block" style="width:100%;height: 500px;">
+    </div>
+  </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev" >
+    <span class="carousel-control-prev-icon" ></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-8">
