--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,6 +37,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Career</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Career</a>
+        </li>
       </ul>
       <button type="button" class="btn btn-dark">Log In</button>
     </div>
