--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     
       <a class="navbar-brand" href="#">
-        <img src="./assets/images/ISA_LOGO.png" alt="Logo" style="width:50px;" class="rounded-pill">
+        <img src="" alt="Logo" style="width:50px;" class="rounded-pill">
       </a>
   
     <a class="navbar-brand" href="#">IS AUTOMATION</a>
